<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/Daybackground"
    tools:context="thermocompany.thermostat.Weekoverview"
    android:gravity="center_horizontal|center_vertical"
    android:orientation="vertical">

    <Button
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:text="@string/Monday"
        android:textSize="30sp"
        android:layout_margin="10dp"
        android:textAllCaps="false"
        android:backgroundTint="#FFFFFF"/>

    <Button
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:text="@string/Tuesday"
        android:textSize="30sp"
        android:layout_margin="10dp"
        android:textAllCaps="false"
        android:backgroundTint="#FFFFFF"/>

    <Button
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:text="@string/Wednesday"
        android:textSize="30sp"
        android:layout_margin="10dp"
        android:textAllCaps="false"
        android:backgroundTint="#FFFFFF"/>

    <Button
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:text="@string/Thursday"
        android:textSize="30sp"
        android:layout_margin="10dp"
        android:textAllCaps="false"
        android:backgroundTint="#FFFFFF"/>

    <Button
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:text="@string/Friday"
        android:textSize="30sp"
        android:layout_margin="10dp"
        android:textAllCaps="false"
        android:backgroundTint="#FFFFFF"/>

    <Button
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:text="@string/Saturday"
        android:textSize="30sp"
        android:layout_margin="10dp"
        android:textAllCaps="false"
        android:backgroundTint="#FFFFFF"/>

    <Button
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:text="@string/Sunday"
        android:textSize="30sp"
        android:layout_margin="10dp"
        android:textAllCaps="false"
        android:backgroundTint="#FFFFFF"/>




</LinearLayout>
